--- a/development/css/style.css
+++ b/development/css/style.css
@@ -15,3 +15,11 @@
 	width: 20%;
 }
 
+.questainair li {
+	list-style-type: lower-alpha;
+}
+
+.questainair-questions {
+	list-style-type: decimal;
+}
+
