--- a/development/templates/buyer/info.html
+++ b/development/templates/buyer/info.html
@@ -1,65 +1,111 @@
 <%  console.log(data);  %>
 <div class="well well-lg">
 	<form role="form" action="#" class="form-inline buyer-info" method="POST">
-			<div class="form-group">
-				<label for="firstName">First Name</label>
-				<input type="text" class="form-control" value="<%=(!_.isUndefined(data.name) && !_.isUndefined(data.name.givenName))?data.name.givenName:''%>" id="firstName" placeholder="First Name">
-			</div>	
+		<div class="form-group">
+			<label for="firstName">First Name</label>
+			<input type="text" class="form-control" value="<%=(!_.isUndefined(data.name) && !_.isUndefined(data.name.givenName))?data.name.givenName:''%>" id="firstName" placeholder="First Name">
+		</div>
 
-			<div class="form-group">
-				<label for="firstName">Last Name</label>
-				<input type="text" class="form-control" id="lastName" value="<%=(!_.isUndefined(data.name) && !_.isUndefined(data.name.familyName))?data.name.familyName:''%>" placeholder="Last Name">
-			</div>
+		<div class="form-group">
+			<label for="firstName">Last Name</label>
+			<input type="text" class="form-control" id="lastName" value="<%=(!_.isUndefined(data.name) && !_.isUndefined(data.name.familyName))?data.name.familyName:''%>" placeholder="Last Name">
+		</div>
 
-			<div class="form-group">
-				<label for="emailAddress">Email Address</label>
-				<input type="email" class="form-control" value="<%=(_.isUndefined(data.email))?'':data.email%>" id="emailAddress" placeholder="Enter email">
-			</div>
+		<div class="form-group">
+			<label for="emailAddress">Email Address</label>
+			<input type="email" class="form-control" value="<%=(_.isUndefined(data.email))?'':data.email%>" id="emailAddress" placeholder="Enter email">
+		</div>
 
-			<div class="form-group">
-				<label for="ssn">SSN show</label>
-				<input type="text" class="form-control ssn-input" id="ssn" placeholder="">
-				-
-				<input type="text" class="form-control ssn-input" id="ssn" placeholder="">
-				-
-				<input type="text" class="form-control ssn-input" id="ssn" placeholder="">
-			</div>
+		<div class="form-group">
+			<label for="ssn">SSN show</label>
+			<input type="text" class="form-control ssn-input" id="ssn" placeholder="">
+			-
+			<input type="text" class="form-control ssn-input" id="ssn" placeholder="">
+			-
+			<input type="text" class="form-control ssn-input" id="ssn" placeholder="">
+		</div>
 
-			<div class="form-group">
-				<label for="address">Address</label>
-				<textarea rows="3" class="form-control" id="address" placeholder="Address"><%=(_.isUndefined(data.address))?'':data.address%></textarea>
-			</div>
+		<div class="form-group">
+			<label for="address">Address</label>
+			<textarea rows="3" class="form-control" id="address" placeholder="Address"><%=(_.isUndefined(data.address))?'':data.address%></textarea>
+		</div>
 
-			<div class="form-group">
-				<label for="city">City</label>
-				<input type="text" class="form-control" id="city" value="<%=(_.isUndefined(data.city))?'':data.city%>" placeholder="City">
-			</div>
+		<div class="form-group">
+			<label for="city">City</label>
+			<input type="text" class="form-control" id="city" value="<%=(_.isUndefined(data.city))?'':data.city%>" placeholder="City">
+		</div>
 
-			<div class="form-group">
-				<label for="state">State</label>
-				<select id="state" class="form-control">
-					<option>1</option>
-					<option>2</option>
-					<option>3</option>
-					<option>4</option>
-					<option>5</option>
-				</select>
-			</div>
+		<div class="form-group">
+			<label for="state">State</label>
+			<select id="state" class="form-control">
+				<option value="AL">Alabama</option>
+				<option value="AK">Alaska</option>
+				<option value="AZ">Arizona</option>
+				<option value="AR">Arkansas</option>
+				<option value="CA">California</option>
+				<option value="CO">Colorado</option>
+				<option value="CT">Connecticut</option>
+				<option value="DE">Delaware</option>
+				<option value="DC">District Of Columbia</option>
+				<option value="FL">Florida</option>
+				<option value="GA">Georgia</option>
+				<option value="HI">Hawaii</option>
+				<option value="ID">Idaho</option>
+				<option value="IL">Illinois</option>
+				<option value="IN">Indiana</option>
+				<option value="IA">Iowa</option>
+				<option value="KS">Kansas</option>
+				<option value="KY">Kentucky</option>
+				<option value="LA">Louisiana</option>
+				<option value="ME">Maine</option>
+				<option value="MD">Maryland</option>
+				<option value="MA">Massachusetts</option>
+				<option value="MI">Michigan</option>
+				<option value="MN">Minnesota</option>
+				<option value="MS">Mississippi</option>
+				<option value="MO">Missouri</option>
+				<option value="MT">Montana</option>
+				<option value="NE">Nebraska</option>
+				<option value="NV">Nevada</option>
+				<option value="NH">New Hampshire</option>
+				<option value="NJ">New Jersey</option>
+				<option value="NM">New Mexico</option>
+				<option value="NY">New York</option>
+				<option value="NC">North Carolina</option>
+				<option value="ND">North Dakota</option>
+				<option value="OH">Ohio</option>
+				<option value="OK">Oklahoma</option>
+				<option value="OR">Oregon</option>
+				<option value="PA">Pennsylvania</option>
+				<option value="RI">Rhode Island</option>
+				<option value="SC">South Carolina</option>
+				<option value="SD">South Dakota</option>
+				<option value="TN">Tennessee</option>
+				<option value="TX">Texas</option>
+				<option value="UT">Utah</option>
+				<option value="VT">Vermont</option>
+				<option value="VA">Virginia</option>
+				<option value="WA">Washington</option>
+				<option value="WV">West Virginia</option>
+				<option value="WI">Wisconsin</option>
+				<option value="WY">Wyoming</option>
+			</select>
+		</div>
 
-			<div class="form-group">
-				<label for="zip">Zip</label>
-				<input type="text" class="form-control" value="<%=(_.isUndefined(data.zip))?'':data.zip%>" id="zip" placeholder="Zip">
-			</div>
+		<div class="form-group">
+			<label for="zip">Zip</label>
+			<input type="text" class="form-control" value="<%=(_.isUndefined(data.zip))?'':data.zip%>" id="zip" placeholder="Zip">
+		</div>
 
-			<div class="form-group">
-				<label for="phone">Phone</label>
-				<input type="tel" class="form-control" id="phone" value="<%=(_.isUndefined(data.phone))?'':data.phone%>" placeholder="Phone">
-			</div>
+		<div class="form-group">
+			<label for="phone">Phone</label>
+			<input type="tel" class="form-control" id="phone" value="<%=(_.isUndefined(data.phone))?'':data.phone%>" placeholder="Phone">
+		</div>
 
-			<div class="form-group">
-				<label for="altPhone">Alt. Phone</label>
-				<input type="tel" class="form-control" id="altPhone" value="<%=(_.isUndefined(data.altPhone))?'':data.altPhone%>" placeholder="Alternative Phone">
-			</div>
+		<div class="form-group">
+			<label for="altPhone">Alt. Phone</label>
+			<input type="tel" class="form-control" id="altPhone" value="<%=(_.isUndefined(data.altPhone))?'':data.altPhone%>" placeholder="Alternative Phone">
+		</div>
 
 	</form>
 </div>
