ACR - 184, ACR - 169, ACR - 162, ACR - 166

--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -23,3 +23,22 @@
   list-style-type: decimal;
 }
 
+.message-area {
+  position: fixed;
+  z-index: 2000;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.close-btn {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  display: none;
+}
+
+.input-error {
+  margin-top: 5px;
+}
+
