ACR - 25, ACR - 193, ACR - 59, ACR - 185

--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -42,3 +42,12 @@
   margin-top: 5px;
 }
 
+fieldset {
+  padding-bottom: 20px;
+}
+
+fieldset > div {
+  display: inline-block;
+  width: 45%;
+}
+
