--- a/development/app/modules/admin-owner/templates/layout.hbs
+++ b/development/app/modules/admin-owner/templates/layout.hbs
@@ -5,16 +5,16 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#admin/dashboard">Manage Buyer</a></li>
-        <li><a href="#admin/owner">Manage Owner</a></li>
+        <li><a href="#admin/dashboard">Manage Buyer</a></li>
+        <li class="active"><a href="#admin/owner">Manage Owner</a></li>
         <li><a href="#logout">Logout</a></li>
       </ul>
     </div>
   </div>
 </div>
       
-<h2>Buyer's</h2>
-<div class="list-view"></div>
+<!--h2>Owner's</h2>
+<div class="list-view"></div-->
 
-<h2>Create New Buyer</h2>
+<h2>Create New Owner</h2>
 <div class="create-buyer"></div>
