--- a/development/app/modules/auth/templates/set-password.hbs
+++ b/development/app/modules/auth/templates/set-password.hbs
@@ -6,7 +6,9 @@
 			to access your account in the future.
 		</p>
 
-		<form role="form" action="#" class="reset-password-form" method="POST">
+		<div class="form-area"></div>
+
+		<!--form role="form" action="#" class="reset-password-form" method="POST">
 			<div class="form-group">
 				<label for="password">Password</label>
 				<input type="password" class="form-control" id="password" placeholder="Please enter password">
@@ -20,5 +22,5 @@
 			<div class="form-group">
 					<input type="submit" value="Set My Password And START BUYING" />
 			</div>
-		</form>
+		</form-->
 	</div>
