--- a/development/app/modules/auth/templates/login.hbs
+++ b/development/app/modules/auth/templates/login.hbs
@@ -6,20 +6,18 @@
 			verify you.
 		</p>
 
-		
-		
+		<div class="form-area"></div>
 
-		<form role="form" action="#" class="password-form" method="POST">
+		<!--form role="form" action="#" class="password-form" method="POST">
 			<div class="form-group">
 				<label for="password">Password</label>
 				<input type="password" class="form-control" id="password" placeholder="Please enter password">
 			</div>
 
-	
 			<div class="form-group">
 				<input type="submit" value="Login In START BUYING" />
 			</div>
 
-		</form>
+		</form-->
 
 	</div>
