ACR - 293, ACR - 270,  logout page, Buyer add issue

--- a/development/app/modules/main-layout/templates/admin-layout.hbs
+++ b/development/app/modules/main-layout/templates/admin-layout.hbs
@@ -1,26 +1,19 @@
 <div class="container">
-<div class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#admin/dashboard">AmazingCreditResults.com</a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#admin/dashboard">Dashboard</a></li>
-        <li><a href="#admin/buyer">Add Buyer</a></li>
-        <li><a href="#admin/seller">Add Seller</a></li>
-        <li><a href="#admin/owner">Add Owner</a></li>
-        <li><a href="#logout">Logout</a></li>
-      </ul>
-    </div>
-  </div>
+	<div class="navbar navbar-default" role="navigation">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#admin/dashboard">AmazingCreditResults.com</a>
+	    </div>
+	    <div class="navbar-collapse collapse">
+	      <ul class="nav navbar-nav">
+	        <li class=""><a href="#admin/dashboard">Dashboard</a></li>
+	        <li class=""><a href="#admin/buyer">Add Buyer</a></li>
+	        <li class=""><a href="#admin/seller">Add Seller</a></li>
+	        <li class=""><a href="#admin/owner">Add Owner</a></li>
+	        <li class=""><a href="#logout">Logout</a></li>
+	      </ul>
+	    </div>
+	  </div>
+	</div>		
+	<div class="main-view"></div>
 </div>
-
-	
-	<div class="main-view">
-
-	</div>
-	
-	</div>
-
-	
