--- a/development/app/modules/admin-login/templates/login.hbs
+++ b/development/app/modules/admin-login/templates/login.hbs
@@ -1,5 +1,6 @@
 <div class="row well col-md-6 col-md-offset-3">
-	<form role="form" action="#" class="password-form" method="POST">
+	<div class="form-area"></div>
+	<!--form role="form" action="#" class="password-form" method="POST">
 		<div class="form-group">
 			<label for="username">Username</label>
 			<input type="text" class="form-control" id="username" placeholder="username">
@@ -13,5 +14,5 @@
 		<div class="form-group">
 			<input type="submit" value="Login" />
 		</div>
-	</form>
+	</form-->
 </div>
