--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -43,6 +43,10 @@ div[data-error] {
   color: red;
 }
 
+div[data-fieldsets] button {
+  margin-bottom: 20px;
+}
+
 fieldset {
   padding-bottom: 20px;
 }
