--- a/development/app/modules/admin-dashboard/templates/layout.hbs
+++ b/development/app/modules/admin-dashboard/templates/layout.hbs
@@ -1,4 +1,9 @@
 <h2>User's</h2>
+
+<div class="right">
+	With Selected: <button class="btn delete-selected">Delete</button>
+</div>
+
 <div class="list-view"></div>
 <h2>Product's</h2>
 <div class="product-view"></div>
