--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -38,22 +38,24 @@
   display: none;
 }
 
+.required {
+  color: #FF0000;
+}
+
 div[data-error] {
-  margin-top: 5px;
+  margin-top: 2px;
   color: red;
+  height: 10px;
 }
 
 div[data-fieldsets] button {
   margin-bottom: 20px;
 }
 
-fieldset {
-  padding-bottom: 20px;
-}
-
 fieldset > div {
   display: inline-block;
   width: 45%;
+  vertical-align: top;
 }
 
 .left {
@@ -62,5 +64,33 @@ fieldset > div {
 
 .right {
   float: right;
+}
+
+.form-inline .form-control {
+  display: block;
+  border: none;
+  padding: 0;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -os-box-shadow: none;
+}
+
+.form-inline input, .form-inline select, .form-inline textarea {
+  border: 1px solid !important;
+  padding: 0 5px !important;
+}
+
+input[type=text], select, textarea {
+  width: 90% !important;
+}
+
+textarea {
+  min-height: 50px;
+}
+
+.form-button button {
+  margin-bottom: 20px;
 }
 
