--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -82,7 +82,7 @@ fieldset > div {
   padding: 0 5px !important;
 }
 
-input[type=text], select, textarea {
+input[type=text], input[type=password], select, textarea {
   width: 90% !important;
 }
 
