--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -45,7 +45,7 @@
 div[data-error] {
   margin-top: 2px;
   color: red;
-  height: 10px;
+  min-height: 10px;
 }
 
 div[data-fieldsets] button {
@@ -93,4 +93,9 @@ textarea {
 .form-button button {
   margin-bottom: 20px;
 }
+
+.set-password .form-group, .set-password .form-group input {
+  width: 100%;
+}
+
 
