ACR - 49, ACR - 51, ACR - 43

--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -58,6 +58,10 @@ fieldset > div {
   vertical-align: top;
 }
 
+.full-width fieldset > div {
+  width: 90%;
+}
+
 .left {
   float: left;
 }
@@ -96,6 +100,18 @@ textarea {
 
 .set-password .form-group, .set-password .form-group input {
   width: 100%;
+}
+
+
+.field-birthday select, .multiple-input-h input {
+  width: 30% !important;
+  height: 34px;
+  display: inline-block !important;
+}
+
+fieldset {
+  float: left;
+width: 100%;
 }
 
 
