--- a/development/app/modules/buyer/templates/layout.hbs
+++ b/development/app/modules/buyer/templates/layout.hbs
@@ -1,4 +1,5 @@
-<!--h2>Invetory Table</h2>
-<div class="inventory"></div-->
 <h2>Buyer Info</h2>
 <div class="buyer-info"></div>
+
+<h2>Payment Info</h2>
+<div class="payment-info"></div>
