--- a/development/app/modules/inventory/templates/layout.hbs
+++ b/development/app/modules/inventory/templates/layout.hbs
@@ -1,6 +1,20 @@
 
-<h2>Tradelines</h2>
-<div class="tradelines"></div>
-<h2>Invetory Table</h2>
-<div class="inventory"></div>	
+<div class="col-md-9">
+	<h3>Packages</h3>
+	<div class="packages"></div>
 
+
+
+	<h3>Individual Cards</h3>
+	<div class="tradelines"></div>
+	
+	<h3>Our Current Invetory</h3>
+	<div class="inventory"></div>	
+</div>
+
+
+<div class="col-md-3">
+	<h3>Cart</h3>
+	<div class="cart"></div>
+	<button class="checkout">Checkout</button>
+</div>
