ACR-74. Add ability to create a transaction for a buyer.

--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -98,4 +98,26 @@ textarea {
   width: 100%;
 }
 
+.centered {
+  text-align: center;
+}
 
+.credit-panel {
+  input, select {
+    width: 100% !important;
+  }
+
+  .credit-details {
+    > div {
+      padding: 2px;
+
+      &:first-child {
+        padding-left: 0;
+      }
+
+      &:last-child {
+        padding-right: 0;
+      }
+    }
+  }
+}
