--- a/development/app/modules/buyer-dashboard/templates/layout.hbs
+++ b/development/app/modules/buyer-dashboard/templates/layout.hbs
@@ -2,5 +2,5 @@
 	<div class="row-fluid">
 		<div class="video-area col-md-4"></div>
 		<div class="questionnaire-area col-md-5"></div>	
-		<div class="cart-area" col-md-3></div>	
+		<div class="cart-area col-md-3"></div>	
 	</div>
