--- a/development/app/modules/admin-login/templates/layout.hbs
+++ b/development/app/modules/admin-login/templates/layout.hbs
@@ -1,3 +1,2 @@
-	<h1>AmazingCreditResults.com</h1>
-	<div class="form-view">
-	</div>
+<h1>AmazingCreditResults.com</h1>
+<div class="form-view"></div>
