--- a/development/app/modules/admin-buyer/templates/import.hbs
+++ b/development/app/modules/admin-buyer/templates/import.hbs
@@ -9,4 +9,6 @@
     
 <div id="progress" class="progress" style="margin-top: 20px;">
    <div class="progress-bar progress-bar-success"></div>
-</div>   
+</div>
+
+<a href="{{url}}" target="_blank">Get template Excel file.</a>
