--- a/development/app/modules/main-layout/templates/buyer-layout.hbs
+++ b/development/app/modules/main-layout/templates/buyer-layout.hbs
@@ -2,7 +2,8 @@
 	<h1>AmazingCreditResults.com</h1>
 	<div class="well well-lg">
 		WARNING: If you are NOT <strong class="username"></strong> you will NOT be able to place this order.
-		If you are NOT <strong class="username"></strong>, please contact us at <a href="mailto: sales@amazingcreditresults.com">sales@amazingcreditresults.com</a>
+		If you are NOT <strong class="username"></strong>, please contact us at
+        <a href="mailto:sales@amazingcreditresults.com?subject=Amazing%20Credit%20Results%20-%20Reset%20Password%20Request%20for%20nowak%40yandex.ru">sales@amazingcreditresults.com</a>
 		and we will happily send you a personalized link to order!
 	</div>
 
