--- a/development/app/modules/cart/templates/cart.hbs
+++ b/development/app/modules/cart/templates/cart.hbs
@@ -1,5 +1,4 @@
-<h5>Add Trade Line Products to your cart!</h5>
-
+<div class="cart"></div>
 <div class="form-group">
-			<input type="button" class="checkout-btn" value="Check Out Now!" />
-		</div>
+	<input type="button" class="checkout-btn" value="Check Out Now!" />
+</div>
