--- a/development/app/modules/inventory/templates/layout.hbs
+++ b/development/app/modules/inventory/templates/layout.hbs
@@ -15,6 +15,5 @@
 
 <div class="col-md-3">
 	<h3>Cart</h3>
-	<div class="cart"></div>
-	<button class="checkout">Checkout</button>
+	<div class="cart-area"></div>
 </div>
