--- a/development/app/modules/main-layout/templates/buyer-layout.hbs
+++ b/development/app/modules/main-layout/templates/buyer-layout.hbs
@@ -1,5 +1,8 @@
 <div class="container">
 	<h1>AmazingCreditResults.com</h1>
+	<a href="#logout" title="logout" class="logout-btn right hide">Log out</a>
+	
+	
 	<div class="well well-lg">
 		WARNING: If you are NOT <strong class="username"></strong> you will NOT be able to place this order.
 		If you are NOT <strong class="username"></strong>, please contact us at
