--- a/development/app/modules/main-layout/templates/buyer-layout.hbs
+++ b/development/app/modules/main-layout/templates/buyer-layout.hbs
@@ -6,7 +6,7 @@
 	<div class="well well-lg">
 		WARNING: If you are NOT <strong class="username"></strong> you will NOT be able to place this order.
 		If you are NOT <strong class="username"></strong>, please contact us at
-        <a href="mailto:sales@amazingcreditresults.com?subject=Amazing%20Credit%20Results%20-%20Reset%20Password%20Request%20for%20nowak%40yandex.ru">sales@amazingcreditresults.com</a>
+        <a class="mail-to-h" href="javascript: void(0);">sales@amazingcreditresults.com</a>
 		and we will happily send you a personalized link to order!
 	</div>
 
