--- a/development/core/components/data-table/templates/grid.hbs
+++ b/development/core/components/data-table/templates/grid.hbs
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-12">
-		<div id="grid"></div>
-		<div id="paginator"></div>
+		<div class="grid"></div>
+		<div class="paginator"></div>
 	</div>
 </div>
