--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -1,41 +1,36 @@
-.buyer-info .form-group {
-  width: 49%;
-  margin-bottom: 10px;
-}
-
-.buyer-info .form-group label {
-  width: 25%;
-}
-
-.buyer-info .form-group input, .buyer-info .form-group textarea, .buyer-info .form-group select {
-  width: 70%;
-}
-
-.buyer-info .form-group .ssn-input {
-  width: 20%;
-}
-
-.questainair li {
-  list-style-type: lower-alpha;
-}
-
-.questainair-questions {
-  list-style-type: decimal;
-}
-
 .message-area {
   position: fixed;
   z-index: 2000;
   width: 100%;
   margin: 0;
   padding: 0;
+
+  > div {
+    width: 600px;
+    margin: 10px 50%;
+    left: -300px;
+    position: relative;
+
+    .message {
+      width: 500px;
+    }
+
+    .code {
+      position: absolute;
+      top: 8px;
+      right: 35px;
+    }
+
+    .close-btn {
+      position: absolute;
+      right: 5px;
+      top: 5px;
+    } 
+  }
 }
 
-.close-btn {
-  position: absolute;
-  right: 20px;
-  top: 20px;
-  display: none;
+.submit-button {
+  text-align: center;
 }
 
 .required {
@@ -54,20 +49,16 @@ div[data-fieldsets] button {
 
 fieldset > div {
   display: inline-block;
-  width: 45%;
+  width: 100%;
   vertical-align: top;
+}
+
+.form-group {
+  width: 50%;
 }
 
 .full-width fieldset > div {
   width: 90%;
-}
-
-.left {
-  float: left;
-}
-
-.right {
-  float: right;
 }
 
 .form-inline .form-control {
@@ -87,67 +78,9 @@ fieldset > div {
 }
 
 input[type=text], input[type=password], select, textarea {
-  width: 90% !important;
+  width: 98% !important;
 }
 
 textarea {
   min-height: 50px;
 }
-
-.form-button button {
-  margin-bottom: 20px;
-}
-
-.set-password .form-group, .set-password .form-group input {
-  width: 100%;
-}
-
-
-.field-birthday select, .multiple-input-h input {
-  width: 30% !important;
-  height: 34px;
-  display: inline-block !important;
-}
-
-fieldset {
-  float: left;
-width: 100%;
-}
-
-.centered {
-  text-align: center;
-}
-
-.credit-panel {
-  input, select {
-    width: 100% !important;
-  }
-
-  .credit-details {
-    > div {
-      padding: 2px;
-
-      &:first-child {
-        padding-left: 0;
-      }
-
-      &:last-child {
-        padding-right: 0;
-      }
-    }
-  }
-}
-
-.payment-info {
-  margin-bottom: 20px;
-}
-
-.logout-btn {
-  padding: 5px 10px 0 0;
-}
-
-.backgrid tbody tr.empty td {
-  display: table-cell;
-}
-
-
