--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -1,3 +1,15 @@
+.login-layout {
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  height: 200px;
+  
+  margin: auto;  
+}
+
 .message-area {
   position: fixed;
   z-index: 2000;
@@ -26,6 +38,14 @@
       right: 5px;
       top: 5px;
     } 
+  }
+}
+
+.inactivity-timeout-modal {
+  .clock {
+    text-align:center;
+    font-size: 30px;
+    font-weight: bold;
   }
 }
 
