Got Basic Forms to Work

--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -1,3 +1,35 @@
+.form-group {
+  .dash {
+    display: inline-block;
+    margin: 6px 5px 0 5px;
+  }
+
+  .phone-editor {
+    .area-code, .phone-1, .phone-2 {
+     width: 30%;
+     display: inline-block;
+    } 
+  }
+
+  .ssn-editor {
+    .part-1,  .part-2,  .part-3 {
+      display: inline-block;
+    }
+
+    .part-1 {
+      width: 30%;
+    }
+
+    .part-2 {
+      width: 40%
+    }
+
+    .part-3 {
+      width: 20%;
+    }
+  }
+}
+
 .login-layout {
   position: absolute;
   top:0;
@@ -55,6 +87,32 @@
 
 .required {
   color: #FF0000;
+}
+
+.general-info {
+  .field-title {
+    width: 10%;
+  }
+
+  .field-name\.givenName {
+    width: 45%;
+  } 
+
+  .field-name\.familyName { 
+    width: 45%;
+  }
+
+  .field-street1 {
+    width: 101%;
+  }
+
+  .field-state {
+    width: 24%;
+  }
+
+  .field-zip {
+    width: 25.5%;
+  }
 }
 
 div[data-error] {
