--- a/development/app/modules/admin/login/loginTpl.hbs
+++ b/development/app/modules/admin/login/loginTpl.hbs
@@ -1,3 +1,5 @@
 <div class="welcome-message">
 	Welcome to AmazingCreditResults.com. Please log in as an administrator. Remember - always keep your password secret and change it regularly. If you think someone knows your password, change it straight away.
 </div>
+
+<div class="form"></div>
