Fixed Inactivity Timer

--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -73,6 +73,16 @@
   }
 }
 
+.backgrid  {
+  .action-buttons {
+    width: 100px;
+  }
+
+  .action-buttons .btn {
+    margin-right: 5px;
+  }
+}
+
 .inactivity-timeout-modal {
   .clock {
     text-align:center;
