--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -100,16 +100,24 @@
 }
 
 .general-info {
-  .field-title {
+  .field-name\.title {
     width: 10%;
   }
 
   .field-name\.givenName {
-    width: 45%;
+    width: 35%;
   } 
 
+  .field-name\.middleName { 
+    width: 10%;
+  }
+
   .field-name\.familyName { 
-    width: 45%;
+    width: 35%;
+  }
+ 
+  .field-name\.generation { 
+    width: 9%;
   }
 
   .field-street1 {
@@ -122,6 +130,20 @@
 
   .field-zip {
     width: 25.5%;
+  }
+
+  .field-sendWelcomeEmail, .field-evsVerified, .field-phoneVerified {
+    width: 33%
+  }
+}
+
+.modify-owner {
+   .field-name\.givenName {
+    width: 50%;
+  }
+
+  .field-name\.familyName { 
+    width: 50%;
   }
 }
 
