--- a/development/app/modules/admin/navbar/navbar.hbs
+++ b/development/app/modules/admin/navbar/navbar.hbs
@@ -5,10 +5,11 @@
 
 	<div class="collapse navbar-collapse">
 	  <ul class="nav navbar-nav">
-	  	<li><a href="#/admin/dashboard">Dashboard</a></li>
-	    <li><a href="#/admin/manage-buyers">Manage Buyers</a></li>
-	    <li><a href="#/admin/manage-sellers">Manage Sellers</a></li>
-	    <li><a href="#/admin/manage-products">Manage Products</a></li>
+	    <li><a href="#/admin/manage-buyers">Buyers</a></li>
+	    <li><a href="#/admin/manage-sellers">Sellers</a></li>
+	    <li><a href="#/admin/manage-owners">Owners</a></li>
+	    <li><a href="#/admin/manage-products">Products</a></li>
+	    <li><a href="#/admin/manage-orders">Orders</a></li>
 	  </ul>
 	  
 	  <ul class="nav navbar-nav navbar-right">
