Implemented Masonry for Inventory

--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -99,19 +99,18 @@
     }
   }
 
-  .list {
-    width: 100%;
-    float: left;
+  .list {  
+    width: 75%
   }
 
   .tradelines-list {
-    width: 75%;
+   
   }
 
   .tradeline-container {
-    width: 227px;
-    float: left;
-    margin-right: 1%;
+    width: 260px;
+   
+    margin-right: 10px;
     margin-bottom: 10px;
     overflow: hidden;
     padding: 10px;
