Fixed Recommended Cart Behavior

--- a/development/app/common/css/style.less
+++ b/development/app/common/css/style.less
@@ -100,11 +100,11 @@
   }
 
   .list {  
-    width: 75%
+    width: 100%;
   }
 
   .tradelines-list {
-   
+    width: 75%;
   }
 
   .tradeline-container {
