--- a/ng-acr/app/partials/haml/login.haml
+++ b/ng-acr/app/partials/haml/login.haml
@@ -1,10 +1,12 @@
 .col-lg-4.col-lg-offset-4.col-xs-12
   %h4.text-center Welcome to Amazing Credit Results
-  .form-group
-    %label Username
-    %input.form-control(type="text" ng-model="creds.username")
-  .form-group
-    %label Password
-    %input.form-control(type="password" ng-model="creds.password")
-  .form-group.text-center
-    %input.btn.btn-success(value="Login" ng-click="do.login()")
+  %form(ng-submit="do.login()")
+    .alert.alert-danger(ng-bind="res.message" ng-show="res.message")
+    .form-group
+      %label Username
+      %input.form-control(type="text" ng-model="creds.username")
+    .form-group
+      %label Password
+      %input.form-control(type="password" ng-model="creds.password")
+    .form-group.text-center
+      %input.btn.btn-success(type="submit" value="Login")
