--- a/ng-acr/app/partials/login.html
+++ b/ng-acr/app/partials/login.html
@@ -4,14 +4,14 @@
     <div class='alert alert-danger' ng-bind='res.message' ng-show='res.message'></div>
     <div class='form-group'>
       <label>Username</label>
-      <input class='form-control' ng-model='creds.username' type='text'>
+      <input class='form-control' ng-model='creds.username' tabindex='1' type='text'>
     </div>
     <div class='form-group'>
       <label>Password</label>
-      <input class='form-control' ng-model='creds.password' type='password'>
+      <input class='form-control' ng-model='creds.password' tabindex='2' type='password'>
     </div>
     <div class='form-group text-center'>
-      <input class='btn btn-success' type='submit' value='Login'>
+      <input class='btn btn-success' tabindex='3' type='submit' value='Login'>
     </div>
   </form>
 </div>
