working on form and crud for sellers

--- a/ng-acr/app/partials/haml/login.haml
+++ b/ng-acr/app/partials/haml/login.haml
@@ -3,10 +3,10 @@
   %form(ng-submit="do.login()")
     .alert.alert-danger(ng-bind="res.message" ng-show="res.message")
     .form-group
-      %label Username
-      %input.form-control(type="text" ng-model="creds.username" tabindex="1")
+      %label(for="username") Username
+      %input#username.form-control(type="text" ng-model="creds.username" tabindex="1")
     .form-group
-      %label Password
-      %input.form-control(type="password" ng-model="creds.password" tabindex="2")
+      %label(for="pw") Password
+      %input#pw.form-control(type="password" ng-model="creds.password" tabindex="2")
     .form-group.text-center
       %input.btn.btn-success(type="submit" value="Login" tabindex="3")
