--- a/ng-acr/app/partials/login.html
+++ b/ng-acr/app/partials/login.html
@@ -3,12 +3,12 @@
   <form ng-submit='do.login()'>
     <div class='alert alert-danger' ng-bind='res.message' ng-show='res.message'></div>
     <div class='form-group'>
-      <label>Username</label>
-      <input class='form-control' ng-model='creds.username' tabindex='1' type='text'>
+      <label for='username'>Username</label>
+      <input class='form-control' id='username' ng-model='creds.username' tabindex='1' type='text'>
     </div>
     <div class='form-group'>
-      <label>Password</label>
-      <input class='form-control' ng-model='creds.password' tabindex='2' type='password'>
+      <label for='pw'>Password</label>
+      <input class='form-control' id='pw' ng-model='creds.password' tabindex='2' type='password'>
     </div>
     <div class='form-group text-center'>
       <input class='btn btn-success' tabindex='3' type='submit' value='Login'>
