made the userform modular, improved upon resources, got the create for sellers working

--- a/ng-acr/app/partials/sellers.html
+++ b/ng-acr/app/partials/sellers.html
@@ -1,92 +1,5 @@
 <h2>Sellers</h2>
-<form class='form-inline' ng-submit='view.form.create()'>
-  <div class='alert alert-danger' ng-bind='view.form.error' ng-show='view.form.error'></div>
-  <div class='form-group'>
-    <label class='sr-only' for='title'></label>
-    <select class='form-control' id='title' ng-model='view.form.model.name.title' tabindex='1'>
-      <option selected='selected' value=''>Title</option>
-      <option>Mr.</option>
-      <option>Ms.</option>
-      <option>Mrs.</option>
-    </select>
-  </div>
-  <div class='form-group'>
-    <label class='sr-only' for='first'>First Name</label>
-    <input class='form-control' id='first' ng-model='view.form.model.name.firstName' placeholder='First Name (required)' size='20' tabindex='2' type='text'>
-  </div>
-  <div class='form-group'>
-    <label class='sr-only' for='middle'>Middle Name</label>
-    <input class='form-control' id='middle' ng-model='view.form.model.name.middleName' placeholder='Middle Name' size='20' tabindex='3' type='text'>
-  </div>
-  <div class='form-group'>
-    <label class='sr-only' for='last'>Last Name</label>
-    <input class='form-control' id='last' ng-model='view.form.model.name.firstName' placeholder='Last Name (required)' size='20' tabindex='4' type='text'>
-  </div>
-  <div class='form-group'>
-    <label class='sr-only' for='suffix'></label>
-    <select class='form-control' id='suffix' ng-model='view.form.model.name.suffix' tabindex='5'>
-      <option selected='selected' value=''>Suffix</option>
-      <option>Jr.</option>
-      <option>Sr.</option>
-      <option>III</option>
-      <option>IV</option>
-      <option>V</option>
-    </select>
-  </div>
-  <div class='form-group'>
-    <label class='sr-only' for='dob'>Date of Birth</label>
-    <input class='form-control' id='dob' ng-model='view.form.model.birthday' placeholder='DOB' size='10' tabindex='6' type='text'>
-  </div>
-  <div class='form-group'>
-    <label class='sr-only' for='ssn'>SSN</label>
-    <input class='form-control' id='ssn' ng-model='view.form.model.ssn' placeholder='SSN' size='11' tabindex='7' type='password'>
-  </div>
-  <br>
-  <div class='form-group'>
-    <label class='sr-only' for='address'>Street Address</label>
-    <input class='form-control' id='address' ng-model='view.form.model.street1' placeholder='Street Address' size='30' tabindex='8' type='text'>
-  </div>
-  <div class='form-group'>
-    <label class='sr-only' for='address2'>Street Address 2</label>
-    <input class='form-control' id='address2' ng-model='view.form.model.street2' placeholder='Street Address 2' size='30' tabindex='9' type='text'>
-  </div>
-  <div class='form-group'>
-    <label class='sr-only' for='city'>City</label>
-    <input class='form-control' id='city' ng-model='view.form.model.city' placeholder='City' size='15' tabindex='10' type='text'>
-  </div>
-  <div class='form-group'>
-    <label class='sr-only' for='state'>State</label>
-    <input class='form-control' id='state' ng-model='view.form.model.state' placeholder='State' size='2' tabindex='11' type='text'>
-  </div>
-  <div class='form-group'>
-    <label class='sr-only' for='zip'>Zip</label>
-    <input class='form-control' id='zip' ng-model='view.form.model.zip' placeholder='Zip' size='5' tabindex='12' type='text'>
-  </div>
-  <br>
-  <div class='form-group'>
-    <label class='sr-only' for='email'>Email</label>
-    <input class='form-control' id='email' ng-model='view.form.model.email' placeholder='Email (required)' size='30' tabindex='13' type='email'>
-  </div>
-  <div class='form-group'>
-    <label class='sr-only' for='phone'>Phone</label>
-    <input class='form-control' id='phone' ng-model='view.form.model.phone' placeholder='Phone' size='10' tabindex='14' type='tell'>
-  </div>
-  <br>
-  <div class='checkbox-inline'>
-    <label>
-      <input ng-model='view.form.model.accountVerified' tabindex='15' type='checkbox'>Send welcome Email</input>
-    </label>
-  </div>
-  <div class='checkbox-inline'>
-    <label>
-      <input ng-model='view.form.model.phoneVerified' tabindex='16' type='checkbox'>Phone Verified</input>
-    </label>
-  </div>
-  <br>
-  <div class='form-group pull-right'>
-    <input class='btn btn-success' tabindex='17' type='submit' value='Create'>
-  </div>
-</form>
+<div ng-include="'app/partials/userForm.html'"></div>
 <div class='table-responsive'>
   <table class='table' ng-table='view.tableParams'>
     <tr class='row'>
