added bootstrap to bower, fixed some results problems

--- a/ng-acr/app/partials/userForm.html
+++ b/ng-acr/app/partials/userForm.html
@@ -83,4 +83,5 @@
   <div class='form-group pull-right'>
     <input class='btn btn-success' tabindex='17' type='submit' value='Create'>
   </div>
+  <div class='clearfix'></div>
 </form>
