--- a/ng-acr/app/partials/userForm.html
+++ b/ng-acr/app/partials/userForm.html
@@ -1,4 +1,4 @@
-<form class='form-inline' ng-submit='view.form.create()'>
+<form class='form-inline' ng-submit='view.form.save()'>
   <div class='alert alert-danger' ng-bind='view.form.error' ng-show='view.form.error'></div>
   <div class='form-group'>
     <label class='sr-only' for='email'>Email</label>
@@ -81,7 +81,8 @@
   </div>
   <br>
   <div class='form-group pull-right'>
-    <input class='btn btn-success' tabindex='17' type='submit' value='Create'>
+    <input class='btn btn-info' tabindex='17' type='reset' value='Clear'>
+    <input class='btn btn-success' tabindex='17' type='submit' value='Save'>
   </div>
   <div class='clearfix'></div>
 </form>
