--- a/ng-acr/app/partials/haml/sellers.haml
+++ b/ng-acr/app/partials/haml/sellers.haml
@@ -1,12 +1,3 @@
 %h2 Sellers
 %div(ng-include="'app/partials/userForm.html'")
-.table-responsive
-  %table.table(ng-table="view.tableParams")
-    %tr.row
-      %th.text-left.col-lg-4 Name
-      %th.text-left.col-lg-4 Email
-      %th.text-left.col-lg-4 Phone
-    %tr.row(ng-repeat="user in $data")
-      %td.col-lg-4(data-title="Name" sortable="name" ng-bind="user.fullName")
-      %td.col-lg-4(data-title="Name" sortable="name" ng-bind="user.email")
-      %td.col-lg-4(data-title="Name" sortable="name" ng-bind="user.phone")
+%div(ng-include="'app/partials/userTable.html'")
