--- a/ng-acr/app/partials/owners.html
+++ b/ng-acr/app/partials/owners.html
@@ -1,3 +1,3 @@
-<h2>Buyers</h2>
+<h2>Owners</h2>
 <div ng-include="'app/partials/userForm.html'"></div>
 <div ng-include="'app/partials/userTable.html'"></div>
