added the date type for the dob

--- a/ng-acr/app/partials/haml/userForm.haml
+++ b/ng-acr/app/partials/haml/userForm.haml
@@ -30,7 +30,7 @@
       %option V
   .form-group
     %label.sr-only(for="dob") Date of Birth
-    %input#dob.form-control(type="text" ng-model="view.form.model.birthday" tabindex="7" placeholder="DOB" size="10")
+    %input#dob.form-control(type="date" ng-model="view.form.model.birthday" tabindex="7" placeholder="DOB" size="10")
   .form-group
     %label.sr-only(for="ssn") SSN
     %input#ssn.form-control(type="password" ng-model="view.form.model.ssn" tabindex="8" placeholder="SSN" size="11")
