--- a/ng-acr/app/partials/userForm.html
+++ b/ng-acr/app/partials/userForm.html
@@ -38,7 +38,7 @@
   </div>
   <div class='form-group'>
     <label class='sr-only' for='dob'>Date of Birth</label>
-    <input class='form-control' id='dob' ng-model='view.form.model.birthday' placeholder='DOB' size='10' tabindex='7' type='text'>
+    <input class='form-control' id='dob' ng-model='view.form.model.birthday' placeholder='DOB' size='10' tabindex='7' type='date'>
   </div>
   <div class='form-group'>
     <label class='sr-only' for='ssn'>SSN</label>
