--- a/ng-acr/app/partials/userTable.html
+++ b/ng-acr/app/partials/userTable.html
@@ -1,14 +1,14 @@
 <div class='table-responsive'>
   <table class='table' ng-table='view.tableParams'>
     <tr class='row'>
-      <th class='text-left col-lg-4'>Name</th>
-      <th class='text-left col-lg-4'>Email</th>
-      <th class='text-left col-lg-4'>Phone</th>
+      <th class='text-left col-lg-4 hidden-xs'>Name</th>
+      <th class='text-left col-lg-4 hidden-xs'>Email</th>
+      <th class='text-left col-lg-4 hidden-xs'>Phone</th>
     </tr>
     <tr class='row' ng-click='view.form.loadUser(user)' ng-repeat='user in $data'>
-      <td class='col-lg-4' data-title='Name' ng-bind='user.fullName' sortable='name'></td>
-      <td class='col-lg-4' data-title='Name' ng-bind='user.email' sortable='name'></td>
-      <td class='col-lg-4' data-title='Name' ng-bind='user.phone' sortable='name'></td>
+      <td class='col-lg-4 col-xs-12' data-title='Name' ng-bind='user.fullName' sortable='name'></td>
+      <td class='col-lg-4 col-xs-12' data-title='Name' ng-bind='user.email' sortable='name'></td>
+      <td class='col-lg-4 col-xs-12' data-title='Name' ng-bind='user.phone' sortable='name'></td>
     </tr>
   </table>
 </div>
