--- a/ng-acr/app/partials/haml/userTable.haml
+++ b/ng-acr/app/partials/haml/userTable.haml
@@ -5,7 +5,7 @@
       %th.text-left.col-lg-4.hidden-xs Email
       %th.text-left.col-lg-4.hidden-xs Phone
   %tbody.table-hover
-    %tr.row(ng-repeat="user in $data" ng-click="view.form.loadUser(user)")
+    %tr.row(ng-repeat="user in $data" ng-click="view.form.loadRow(user)")
       %td.col-lg-4.col-xs-12(data-title="Name" sortable="name" ng-bind="user.fullName")
-      %td.col-lg-4.col-xs-12(data-title="Name" sortable="name" ng-bind="user.email")
-      %td.col-lg-4.col-xs-12(data-title="Name" sortable="name" ng-bind="user.phone")
+      %td.col-lg-4.col-xs-12(data-title="Email" sortable="email" ng-bind="user.email")
+      %td.col-lg-4.col-xs-12(data-title="Phone" sortable="phone" ng-bind="user.phone")
